2006-03-10  Brian Bidulock  <bidulock@openss7.org>

	* strinet.spec.in: updated description fields and headers

2006-03-09  Brian Bidulock  <bidulock@openss7.org>

	* strinet.lsm.in: make suitable for Linux Software Map submission

2006-03-08  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/releases.texi (Prerequisites): updated for release

2006-03-07  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: compile tools static for distcheck
	* am/help.am: documented remove target
	* am/openss7.am: added remove target and reverse recursive targets
	* debian/changelog: updated release numbering
	* debian/copyright: updated headers
	* debian/control.in: updated deprecated references to LiS

2006-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: updated headers
	* doc/manual/Makefile.am: updated headers
	* doc/Makefile.am: updated headers
	* src/include/Makefile.am: updated headers
	* src/Makefile.am: updated headers
	* tests/Makefile.am: updated headers
	* Makefile.am: updated headers

2006-03-04  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: updated headers

2006-03-03  Brian Bidulock  <bidulock@openss7.org>

	* THANKS: updated for release
	* doc/man/strinet.macros: updated for release
	* doc/man/strinet.refs: updated references
	* README-nexusware: updated for release

2006-03-02  Brian Bidulock  <bidulock@openss7.org>

	* README: updated for release
	* doc/manual/releases.texi (Bugs, Known Bugs, Maturity): updated release notes
	* doc/manual/strinet.texi (detailed node listing): added missing Troubleshooting
	* README-cvs: updated for release

2006-03-01  Brian Bidulock  <bidulock@openss7.org>

	* ChangeLog: corrected format
	* Makefile.am: updated headers
	* README: updated headers
	* TODO: updated to do items
	* README: updated for release

2006-02-23  Brian Bidulock  <bidulock@openss7.org>

	* ChangeLog: modified -- updated for new release
	* Makefile.am: modified -- added TODO file to distribution